tests/paczka1/fuzzy1/25190053.err
Error in line 3: biMbFz S114 57,5
Error in line 9: AGB A650 50,45
Error in line 2: A843 S114 87,1
Error in line 12: I6aHXI A650 54,9
Error in line 14: AGB A843 221,6
Error in line 30: zcHCjzA0Dg A650 36,16
Error in line 35: A843 A650 77,34
Error in line 29: AGB S114 5,9
